<resources>
    <string name="app_name">TongAPP</string>
    <string name="win">您嬴了!</string>
    <string name="equal">打和</string>
    <string name="fail">您...輸了!</string>
    <string name="ready">快來!</string>
    <string name="choose">出咩好呢?!</string>
    <string name="again">再來一次</string>
    <string name="htitle">記錄</string>
    <string name="username">使用者名稱</string>
    <string name="password">密碼</string>
    <string name="view_data">番查資料</string>
    <string name="add_user">增加資料</string>
    <string name="update">更新資料</string>
    <string name="delete">DELETE資料</string>
    <string name="title_activity_maps">Map</string>
</resources>
